<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_TopologyData" Id="{5d08a84e-1f56-46ac-aaa4-2ed7c29c3705}">
    <Declaration><![CDATA[TYPE ST_TopologyData :
STRUCT
    iOwnPhysicalAddr 	: UINT;
    iOwnAutoIncAddr		: UINT;
    stPhysicalAddr		: ST_PortAddr;
    stAutoIncAddr		: ST_PortAddr;
    iPortDelay			: ARRAY [0..2] OF UDINT; (* EC_AD, EC_DB, EC_BC *)
    iReserved			: ARRAY [0..7] OF UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>